
- Fix bug #3913: beanshell do-while loop bug (Patch #572 Jesse Pavel)

- Fix Java_File_Save macro: accept text after class name (Eric Le Lay)

- Fix bug #3936, better choice for text area corner colors (Dale Anson)

- Fix bug #3717, gutter lines not aligning with text area lines (Dale Anson)

- Fix bug #3937, issue with non-capturing groups in regex search and replace
  (Dale Anson)

}}}
{{{ Miscellaneous

- Rollback Patch #537- Floating dockables as JDialog.

}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 5.3.0

Thanks to Björn "Vampire" Kautler, Alan Ezust, Makarius, Jakub Holý,
Mark Corbin, Matt Galligan, Kevin Hunter Kesling, Darien Brown,
Matthieu Casanova, Sergey Mashkov, Dale Anson, Kevin Leblanc,
Marcelo Vanzin, Jordan Miner, yaraba, Marc M. Adkins, and Eric Le Lay for
contributing to this release.

{{{ Bug Fixes

- JEditBuffer.isFoldEnd() was unable to detect the fold end when it was the
  last line (#3917 - Matthieu Casanova)

- More accurate wrap margin calculation (Patch#555 - Makarius)

- Fix AWT thread-safety issue in VFSManager.error(). (Marcelo Vanzin)

- Order of unsorted buffers now preserved in View.getBuffers()
  (Patch # 548 - Kevin Leblanc)

- Support for negative line spacing (Patch #535 - Makarius)

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)

- Fix bug #3881, non-capturing lookahead in regex search didn't work.
  (Dale Anson)

- Fix bug #3184: File browser completion dives into wrong directory
  (Eric Le Lay)

- Fix bug #2833 Plugin jars dependencies not removed (Eric Le Lay)

- Fix bug #3911, text area was scrolling to the left when saving. (Dale Anson)

- Fix bug #3599 Key typing in Install panel. Search Field gets focus on show
  and when one types '/' or a letter in the list. (Eric Le Lay)

- Fix bug #2877 "Hide installed" checkbox in Install panel. Don't re-install
  unloaded plugins (Eric Le Lay)

}}}
{{{ UI Improvements
